--- a/css/personal.css
+++ b/css/personal.css
@@ -145,7 +145,7 @@ embed.personal_slide{
   }
 
   div.personal_intro_slogan{
-    font-size: 14px;
+    font-size: 16px;
   }
 
   div.personal_interface_block{
@@ -326,8 +326,12 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
   }
 
   div.feature_content{
-    font-size: 14px;
-    padding-bottom: 0;
+    font-size: 16px;
+    padding: 20px 20px 0; 
+  }
+
+  br.-break{
+    display: none;
   }
 
 }
@@ -369,7 +373,7 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
   }
 
   div.feature_content{
-    font-size: 15px;
+    font-size: 16px;
     padding-bottom: 0;
   }
 
@@ -443,11 +447,11 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
     padding: 0;
     transform: translateY(0);
     width: 70%;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   div.feature_highlight{
-    font-size: 14px;
+    font-size: 16px;
   }
 
   img.feature_img{
@@ -525,11 +529,11 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
     padding: 0;
     transform: translateY(0);
     width: 70%;
-    font-size: 15px;
+    font-size: 16px;
   }
 
   div.feature_highlight{
-    font-size: 15px;
+    font-size: 16px;
   }
 
   img.feature_img{
@@ -673,10 +677,8 @@ button.btn_left.-on, button.btn_right.-on{
     margin-bottom: 16px;
     position: relative;
     text-align: center;
+    padding: 16px 0;
   }
-
-  
-
 
   div.feature_img{
     width: 90%;
@@ -684,15 +686,18 @@ button.btn_left.-on, button.btn_right.-on{
 
   div.feature_highlight_title{
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    padding: 10px 0;
   }
 
   div.feature_highlight{
-    font-size: 14px;
+    font-size: 16px;
+    padding: 10px 10px;
+    line-height: 180%;
   }
 
   div.feature_highlight2{
-    font-size: 14px;
+    font-size: 16px;
     opacity: 0;
     position: absolute;
     opacity: 0;
@@ -748,14 +753,15 @@ button.btn_left.-on, button.btn_right.-on{
   div.feature_highlight_title{
     text-align: center;
     font-size: 22px;
+    padding: 10px 0 20px;
   }
 
   div.feature_highlight{
-    font-size: 14px;
+    font-size: 16px;
   }
 
   div.feature_highlight2{
-    font-size: 14px;
+    font-size: 16px;
     opacity: 0;
     position: absolute;
     opacity: 0;
@@ -893,13 +899,23 @@ button.ready:hover{
   }
 
   div.bottom_title{
-    border-bottom: 1px solid black;
     width: 90%;
     font-size: 20px;
+    position: relative;
+  }
+
+  div.bottom_title::after{
+    content: "";
+    border-bottom: 1px solid black;
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
   }
 
   div.bottom_content{
-    font-size: 14px;
+    font-size: 16px;
   }
 
 }  
@@ -917,10 +933,18 @@ button.ready:hover{
   }
   
   div.bottom_title{
-    border-bottom: 1px solid black;
     font-size: 24px;
+    position: relative;
   }
-  
+  div.bottom_title::after{
+    content: "";
+    border-bottom: 1px solid black;
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+  }
 
 }  
 
@@ -938,7 +962,17 @@ button.ready:hover{
   }
 
   div.bottom_title{
+    position: relative;
+  }
+  
+  div.bottom_title::after{
+    content: "";
     border-bottom: 1px solid black;
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
   }
 
   
