--- a/css/community.css
+++ b/css/community.css
@@ -929,6 +929,79 @@ div.travel_hover{
 }
 
 
+a.mtn:active div.mtn_hover{
+  opacity: 1;
+}
+
+a.mtn:active div.mtn{
+  opacity: 0;
+}
+
+a.edu:active div.edu_hover{
+  opacity: 1;
+}
+
+a.edu:active div.edu{
+  opacity: 0;
+}
+
+a.code:active div.code_hover{
+  opacity: 1;
+}
+
+a.code:hover div.code{
+  opacity: 0;
+}
+
+a.music:active div.music_hover{
+  opacity: 1;
+}
+
+a.music:active div.music{
+  opacity: 0;
+}
+
+a.lan:active div.lan_hover{
+  opacity: 1;
+}
+
+a.lan:active div.lan{
+  opacity: 0;
+}
+
+a.shop:active div.shop_hover{
+  opacity: 1;
+}
+
+a.shop:active div.shop{
+  opacity: 0;
+}
+
+a.build:active div.build_hover{
+  opacity: 1;
+}
+
+a.build:active div.build{
+  opacity: 0;
+}
+
+a.soc:active div.soc_hover{
+  opacity: 1;
+}
+
+a.soc:active div.soc{
+  opacity: 0;
+}
+
+a.travel:active div.travel_hover{
+  opacity: 1;
+}
+
+a.travel:active div.travel{
+  opacity: 0;
+}
+
+
 
 
 
