--- a/css/community.css
+++ b/css/community.css
@@ -739,10 +739,12 @@ div.travel_hover{
 
 .-hide{
   opacity: 0 !important;
+  transition: opacity 0s;
 }
 
 .-appear{
   opacity: 1 !important;
+  transition: opacity 0s;
 }
 
 
